# rockchip-rknn-android

./: .gitignore  LICENSE  README.md  README.zh-CN.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-07-16-release-and-bilingual-readme.md
docs/superpowers/specs/: 2026-07-16-release-and-bilingual-readme-design.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
src/main/cpp/: CMakeLists.txt
src/main/cpp/src/: rknn_jni.cpp
src/main/java/androidx/runtime/rknn/: ModelResult.kt  RknnApi.kt  RknnBackend.kt  RknnDeviceInfo.kt  RknnEmbeddingResult.kt  RknnImageClassifier.kt  RknnInferenceResult.kt  RknnInputConfig.kt  RknnLandmarks.kt  RknnModelConfig.kt  RknnModelType.kt  RknnObjectDetector.kt  RknnOptions.kt  RknnRawInference.kt  RknnRuntime.kt  RknnRuntimeSession.kt  RknnState.kt  RockchipProbe.kt
src/main/java/androidx/runtime/rknn/data/: RknnBoundingBox.kt  RknnCategory.kt  RknnDetection.kt  RknnImage.kt  RknnImageClassificationResult.kt  RknnKeypoint.kt  RknnLandmark.kt  RknnLandmarkResults.kt  RknnObjectDetectionResult.kt  RknnOrientedBox.kt  RknnSegmentationMask.kt
src/main/java/androidx/runtime/rknn/decoder/: EfficientDetDecoder.kt  EfficientNetLiteModel.kt  ImageClassifierDecoder.kt  LandmarkDecoders.kt  LandmarkModels.kt  MediaPipeObjectDetectorModel.kt  MediaPipeSsdDecoder.kt  RawYoloDecoder.kt  RknnDecodedResult.kt  RknnDecoderRegistry.kt  (+11 more)
src/test/java/androidx/runtime/rknn/: RknnInputConfigTest.kt  RknnModelConfigTest.kt  RknnOptionsTest.kt
(+40 files in other folders)
